tests/compile_fail/not_fn.rs
use live_prop_test::live_prop_test;

#[live_prop_test]
struct NotAFunction;

fn main() {}
